solved10